--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <audio id="background-music" controls aria-label="Background Music">
     <source src="sound/mario 64.mp3.mp3" type="audio/mpeg">
     </audio>
+    <button id="toggle-thumbnail-container" aria-label="Toggle Thumbnails">Toggle Thumbnails</button>
   </body>
 </html>
